# openai-messages-token-helper

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest_axe_playwright_snapshot.py
.github/: copilot-instructions.md
.github/workflows/: pr-body-reader.yml  python.yaml
src/llm_messages_token_helper/: __init__.py  message_builder.py  model_helper.py
src/openai_messages_token_helper/: __init__.py  function_format.py  images_helper.py  message_builder.py  model_helper.py
tests/: functions.py  image_messages.py  messages.py  test_imageshelper.py  test_messagebuilder.py  test_modelhelper.py  test_snapshot.py  test_snapshot_to_dict.py  verify_functions.py  verify_openai.py
tests/snapshots/test_snapshot/test_violations_fewer_instances/chromium/: snapshot.txt
tests/snapshots/test_snapshot/test_violations_fixed/chromium/: snapshot.txt
tests/snapshots/test_snapshot/test_violations_more_instances/chromium/: snapshot.txt
tests/snapshots/test_snapshot/test_violations_new/chromium/: snapshot.txt
tests/snapshots/test_snapshot/test_violations_same/chromium/: snapshot.txt
